--- a/If-Else.ipynb
+++ b/If-Else.ipynb
@@ -319,6 +319,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first number : 23\n",
+      "Enter second number : 34\n",
+      "Enter third number : 45\n",
+      "Numer 3 = 45 is greater\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = int(input(\"Enter first number : \"))\n",
+    "num2 = int(input(\"Enter second number : \"))\n",
+    "num3 = int(input(\"Enter third number : \"))\n",
+    "\n",
+    "if num1 > num2 and num1 > num3:\n",
+    "    print(f\"Numer 1 = {num1} is greater\")\n",
+    "elif num2 > num1 and num2 > num3:\n",
+    "    print(f\"Numer 2 = {num2} is greater\")\n",
+    "elif num3 > num1 and num3 > num2:\n",
+    "    print(f\"Numer 3 = {num3} is greater\")\n",
+    "else:\n",
+    "    print(\"All are equal\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
