--- a/Lists.ipynb
+++ b/Lists.ipynb
@@ -1811,6 +1811,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Manupilating a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hallway', 11.25, 'kitchen', 18.0, 'chill zone', 20.0, 'bedroom', 10.75, 'bathroom', 10.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "areas = [\"hallway\", 11.25, \"kitchen\", 18.0, \"chill zone\", 20.0,\n",
+    "         \"bedroom\", 10.75, \"bathroom\", 10.50]\n",
+    "print(areas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hallway', 11.25, 'kitchen', 18.0, 'chill zone', 20.0, 'bedroom', 10.75, 'bathroom', 10.5, 'poolhouse', 23.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "area_1 = areas + [\"poolhouse\" , 23.5]\n",
+    "print(area_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hallway', 11.25, 'kitchen', 18.0, 'chill zone', 20.0, 'bedroom', 10.75, 'bathroom', 10.5, 'poolhouse', 23.5, 'garage', 56.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "area_2 = area_1 + [\"garage\" , 56.5]\n",
+    "print(area_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['liza', 45.5], ['emma', 56.5], ['watson', 22.5], ['zara', 77.7], ['sarah', 45.8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fam = [\n",
+    "    [\"liza\" , 45.5] , \n",
+    "    [\"emma\" , 56.5] , \n",
+    "    [\"watson\" , 22.5] , \n",
+    "    [\"zara\" , 77.7] ,\n",
+    "    [\"sarah\" , 45.8]\n",
+    "]\n",
+    "print(fam)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['liza', 45.5], ['emma', 56.5], ['watson', 22.5], ['zara', 77.7], ['sarah', 45.8], ['nora', 45.4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fam_1 = fam + [[\"nora\" , 45.4]]\n",
+    "print(fam_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "fam_1 = fam.append([\"liza\" , 4.5])\n",
+    "print(fam_1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
