--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -293,6 +293,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# For Loop"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
